# systems-foundations

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md
.codex/: config.toml
docs/: README.md  release-v0.1.0.md  release-v0.2.0.md  reviewer-brief.md
notes/: 408-to-linux-security.md  README.md  auth-event-schema.md  journald-syslog-basics.md  network-snapshot-schema.md  network-state-to-detection-thinking.md  ss-iproute2-basics.md
notes/linux/: README.md  command-line-basics.md  file-operations-patterns.md  file-viewing-and-log-preview.md  git-first-repository-workflow.md  log-config-diff-troubleshooting.md  path-command-discovery-and-find.md  permissions-users-collaboration.md  public-note-policy.md  sanitization-checklist.md  system-information-and-disk-triage.md  text-processing-pipelines.md  user-account-basics.md
projects/linux-auth-observe/: README.md  pyproject.toml
projects/linux-auth-observe/src/linux_auth_observe/: __init__.py  cli.py  filters.py  models.py  report.py
projects/linux-auth-observe/src/linux_auth_observe/parsers/: __init__.py  common.py  journal_json.py  syslog_auth.py
projects/linux-auth-observe/tests/: test_cli.py  test_filters.py  test_golden.py  test_normalize.py  test_summary.py
projects/linux-auth-observe/tests/fixtures/: journal_sample.jsonl
projects/linux-auth-observe/tests/golden/: journal_sample.golden.jsonl  rhel_secure.golden.jsonl  ubuntu_auth.golden.jsonl
projects/linux-permission-observe/: README.md  pyproject.toml
projects/linux-socket-observe/: README.md  pyproject.toml
(+49 files in other folders)
